--- a/config/sso.yml.sample
+++ b/config/sso.yml.sample
@@ -1,4 +1,4 @@
 accounts:
-  provider_url: http://accounts.wanliu.biz/
+  provider_url: http://accounts.wanliu.biz
   app_id: YE0NYveQGoFsNLX220Dy5g
   app_secret: aqpGBedDnHFyp5MmgT8KErr9D015ScmaY8r3vHg5C0
